--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </title>
     <script type="text/javascript" src="webgui/scripts/sweetalert.min.js"></script>
     <link rel="stylesheet" href="StyleSheet.css" type="text/css" /><link rel="stylesheet" href="PrintStyleSheet.css" type="text/css" media="print" /><link rel="stylesheet" href="webgui/css/base/jquery.ui.all.css" /><link rel="stylesheet" href="webgui/css/TimeWorkStyle.css" /><link rel="stylesheet" href="webgui/css/jquery.ui.timepicker.css" /><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <script type="text/javascript" src="webgui/scripts/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="webgui/scripts/jquery-migrate-1.1.1.min.js"></script>
     <script type="text/javascript" src="webgui/scripts/jquery-ui.js"></script>
